--- a/modules/home/impacts.module.scss
+++ b/modules/home/impacts.module.scss
@@ -1,6 +1,11 @@
+.impactsContainer {
+	background-color: green;
+}
+
 .impactsWrapper {
 	width: 100%;
 	text-align: center;
+	padding: 2.5%;
 }
 
 .cardsContainer {
