--- a/modules/about/summary.module.scss
+++ b/modules/about/summary.module.scss
@@ -8,3 +8,15 @@
 	display: flex;
 	flex-direction: row;
 }
+
+.summaryImg {
+	width: 40%;
+	position: relative;
+	margin: 0 5%;
+	flex-shrink: 0;
+	background-color: red;
+}
+
+.summaryInfo {
+	padding-right: 5%;
+}
