--- a/modules/home/impactCard.module.scss
+++ b/modules/home/impactCard.module.scss
@@ -1,6 +1,6 @@
 .impactCardContainer {
 	width: max(27%);
-	background-color: lightgreen;
+	background-color: $light-green;
 	border-radius: 15px;
 }
 
