--- a/modules/home/impacts.module.scss
+++ b/modules/home/impacts.module.scss
@@ -1,5 +1,6 @@
 .impactsContainer {
-	background-color: green;
+	color: $default-text-color;
+	background-color: $dark-green;
 }
 
 .impactsWrapper {
