--- a/modules/home/join.module.scss
+++ b/modules/home/join.module.scss
@@ -18,11 +18,12 @@
 
 .joinContent {
 	width: 50%;
-	background-color: paleturquoise;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
+	color: white;
+	text-align: center;
 }
 
 .signContainer {
