--- a/modules/about/featured.module.scss
+++ b/modules/about/featured.module.scss
@@ -1,4 +1,24 @@
 .featuredContainer {
-	background-color: palegreen;
+	background-color: $light-grey;
 	text-align: center;
+
+	h2 {
+		color: $dark-green;
+	}
+}
+
+.featuredIcons {
+	height: 10vh;
+	padding: 0% 5%;
+	display: grid;
+	gap: 1rem;
+	/*grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));*/
+	grid-template-columns: 1fr 1fr;
+}
+
+.featuredIcon {
+	width: inherit;
+	position: relative;
+	flex-shrink: 0;
+	background-color: red;
 }
