--- a/modules/contact/faq.module.scss
+++ b/modules/contact/faq.module.scss
@@ -1,3 +1,15 @@
 .faqContainer {
+	margin-top: $start-margin;
 	text-align: center;
+
+	h2 {
+		color: $dark-green;
+	}
+}
+
+.qaContainer {
+	padding: 0 10% 5% 10%;
+	display: grid;
+	gap: calc(2.5% + 1em);
+	grid-template-columns: 1fr 1fr;
 }
