added events mapping and styling

--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -4,6 +4,7 @@ $darkest-green: #2e4541;
 $dark-green: #3e5b4f;
 $mid-green: #5d8465;
 $light-green: #9ab291;
+$dark-grey: #3d3d3d;
 $light-grey: #d5d8cc;
 
 $main-header-font: "Montserrat", sans-serif;
