--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -19,6 +19,7 @@ $default-text-color: #ffffff;
 $dark-text-color: #000000;
 
 $default-header-size: 2.5vw;
+$smaller-header-size: 2vw;
 $default-text-size: 1.6vw;
 
 $start-margin: 7vw;
