--- a/common/components/socialIcons.module.scss
+++ b/common/components/socialIcons.module.scss
@@ -1,4 +1,33 @@
+.iconsContainer {
+	width: 100%;
+}
+
 .iconsWrapper {
 	display: flex;
 	flex-direction: row;
+	justify-content: center;
+}
+
+.icon {
+	width: 15%;
+	margin: 0 3%;
+	padding: 4.3% 5%;
+	background-color: $mid-green;
+	border-radius: 50%;
+
+	&:hover {
+		background-color: white;
+		border: solid;
+		border-width: 3%;
+		border-color: $mid-green;
+		transition: all 0.5s ease-in-out;
+
+		svg {
+			color: $mid-green;
+		}
+	}
+
+	svg {
+		color: #ffffff;
+	}
 }
