--- a/modules/home/impacts.module.scss
+++ b/modules/home/impacts.module.scss
@@ -6,7 +6,12 @@
 .impactsWrapper {
 	width: 100%;
 	text-align: center;
-	padding: 2.5%;
+	padding: 3%;
+
+	h2 {
+		margin-top: 0;
+		margin-bottom: 3%;
+	}
 }
 
 .cardsContainer {
