fixed aspect ratio member images in about

--- a/modules/about/memberCard.module.scss
+++ b/modules/about/memberCard.module.scss
@@ -1,7 +1,11 @@
 .memberContainer {
 	width: 100%;
+}
+
+.memberImg {
 	img {
-		width: inherit;
+		object-fit: cover;
+		aspect-ratio: 1/1;
 	}
 }
 
