--- a/common/components/navbar.module.scss
+++ b/common/components/navbar.module.scss
@@ -32,3 +32,16 @@
 		justify-content: space-between;
 	}
 }
+
+
+@media screen and (max-width:360px) {
+    .navbarContainer {
+        display: none;
+    }
+  }
+
+  @media screen and (max-width:414px) {
+	.navbarContainer {
+        display: none;
+    }
+  }
