--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -22,4 +22,8 @@ $default-header-size: 2.5vw;
 $smaller-header-size: 2vw;
 $default-text-size: 1.6vw;
 
+$default-mobile-header-size: 30px;
+$smaller-mobile-header-size: 20px;
+$default-mobile-text-size: 15px;
+
 $start-margin: 7vw;
