--- a/modules/home/impacts.module.scss
+++ b/modules/home/impacts.module.scss
@@ -14,3 +14,12 @@
 	flex-direction: row;
 	justify-content: space-evenly;
 }
+
+
+@media screen and (max-width:360px) {
+
+}
+
+@media screen and (max-width:414px) {
+
+}
