--- a/modules/home/impacts.module.scss
+++ b/modules/home/impacts.module.scss
@@ -15,11 +15,20 @@
 	justify-content: space-evenly;
 }
 
+@media screen and (max-width:414px) {
+	.cardsContainer {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+	}
+	.impactsWrapper {
+		h2 {
+			font-size: $default-mobile-header-size;
+		}
+	}
+}
 
 @media screen and (max-width:360px) {
 
 }
 
-@media screen and (max-width:414px) {
-
-}
